fix temp overflow

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -25,6 +25,7 @@ body {
   background: transparent;
   position: absolute;
   top: 0;
+  overflow: hidden;
   left: 0;
   -webkit-transition: background-color 2s ease-in-out;
 }
